# verification-agents

./: .env.example  README.md  pyproject.toml  run.py  run_specialists.py
data_pipeline/: records.py  stats.py
docs/: index.html
tests/: test_api.py  test_e2e.py  test_generalist.py  test_specialists.py
tests/fixtures/: buggy.diff
verification_agents/: api.py  models.py  orchestrator.py  prompts.py
verification_agents/eval/: __init__.py  dataset.py  dataset_hard.py  run_eval.py  weave_eval.py
verification_agents/specialists/: __init__.py  challenger.py  encoders.py  examples.py  executor.py  generalist.py  redis_store.py  types.py  verify.py
verification_agents/tools/: ask_user.py  dispatcher.py  formalize.py  parse_diff.py  registry.py  submit_report.py  z3_solve.py
